fixed diagram \(finally\)

--- a/CS191/Lectures/lecture13.tex
+++ b/CS191/Lectures/lecture13.tex
@@ -95,7 +95,7 @@ So, the map $V$ preserves inner product and is termed an $\textbf{isometry}$. Ou
 \[ \mathcal{N}(\rho) = \tr_E(V \rho V^{\dagger}) \]
 In particular, this is called the \textbf{Stinespring representation} of the channel. We can also write with Kraus operators:
 \[ V \ket{\Psi}  = \sum_i K_i \ket{\Psi} \ket{i}_E \]
-where $V^{dagger}V = I$ implies $\sum_i K_i^{\dagger} K_i = I$. The channel then becomes
+where $V^{\dagger}V = I$ implies $\sum_i K_i^{\dagger} K_i = I$. The channel then becomes
 \[ \mathcal{N}(\rho) = \tr_E\qty(\sum_{i, j} K_i \rho K_j^{\dagger} \otimes \ket{i}\bra{j}) = \sum_i K_i \rho K_i^{\dagger} \]
 This is called the \textbf{Kraus representation} of the channel.
 
