--- a/CS191/Lectures/lecture15.tex
+++ b/CS191/Lectures/lecture15.tex
@@ -35,11 +35,11 @@ then we could measure in computational basis and be done. The problem is we cann
 So instead, we build the following circuit, calling our noisy codeword $\ket{x}$
 \begin{center}
 \begin{quantikz}
-   \lstick[wires=3]{$\ket{x}$} & \ctrl{3}\qw & \qw & \qw & \qw & \qw\\ 
-                      & \qw & \ctrl{2}\qw & \ctrl{3}\qw & \qw & \qw \\ 
-                      & \qw & \qw         & \qw & \ctrl{2}\qw & \qw \\
-   \lstick{$\ket{0}$} & \targ\qw & \targ\qw & \qw & \qw & \qw \\ 
-   \lstick{$\ket{0}$} & \qw &      \qw &    \targ\qw & \targ\qw & \qw \\ 
+   \lstick[wires=3]{$\ket{x}$} & \ctrl{3}\qw & \qw & \qw & \qw & \qw & \qw\\ 
+                      & \qw & \ctrl{2}\qw & \ctrl{3}\qw & \qw & \qw & \qw\\ 
+                      & \qw & \qw         & \qw & \ctrl{2}\qw & \qw & \qw \\
+   \lstick{$\ket{0}$} & \targ\qw & \targ\qw & \qw & \qw & \qw & \meter{}\\ 
+   \lstick{$\ket{0}$} & \qw &      \qw &    \targ\qw & \targ\qw & \qw & \meter{} \\ 
 \end{quantikz}
 \end{center}
 This maps a computational basis state
@@ -47,7 +47,7 @@ This maps a computational basis state
 and then measures the ancilla bits.
 
 \noindent
-\textbf{Case 1.} If there was no error, we have $\ket{00}$ on the ancilla (extra) bits and measure $00$.
+\textbf{Case 1.} If there was no error, we have $\ket{00}$ on the ancilla bits and measure $00$.
 The state collapses back to $\alpha \ket{000} + \beta \ket{111}$.
 
 \noindent
