--- a/Math202a/Lectures/lecture3.tex
+++ b/Math202a/Lectures/lecture3.tex
@@ -41,6 +41,6 @@ quantifiers can instead be replaced by union and interaction. $\bigcap$ is rough
     \end{proof}
 \end{theorem}
 But is $N$ negligible? But this would imply $N \cup N^c = [0, 1]$ is negligible. This seems
-not possble. How do we prove it? Consider a finite number of intervals $O_i = (a_i, b_i)$ of length $d_i = b_i - a_i$.
-If $d = \sum d_i < \epsilon$, then clearly it should not be possible to cover the entire interval. But $\Q$ is dense in $[0, 1)$,
+not possble. How do we prove it? Consider a number of intervals $O_i = (a_i, b_i)$ of length $d_i = b_i - a_i$.
+If $d = \sum d_i < \epsilon$, then clearly it should not be possible to cover the entire interval, just by stacking them on each other. But $\Q$ is dense in $[0, 1)$,
 yet we could still cover $\Q \subseteq [0, 1]$. The difference is $[0, 1]$ is compact.
