--- a/Math202a/preamble.tex
+++ b/Math202a/preamble.tex
@@ -116,6 +116,7 @@
 \renewtheorem*{theorem*}{Theorem}
 \renewtheorem{example}{Example}[section]
 \renewtheorem{proof}{Proof}[section]
+\renewtheorem{corollary}{Corollary}[section]
 \newtheorem{algothm}{Algorithm}[section]
 \newtheorem{ptheorem}{PseudoTheorem}[section]
 \renewtheorem*{proof*}{Proof}
