--- a/Math250a/preamble.tex
+++ b/Math250a/preamble.tex
@@ -321,3 +321,6 @@
 \tikzset{2tail reversed/.code={\pgfsetarrowsstart{Implies}}}
 % TikZ arrow styles.
 \tikzset{no body/.style={/tikz/dash pattern=on 0 off 1mm}}
+
+% 250A
+\DeclareMathOperator{\ann}{ann}
