--- a/Math202a/lectures.tex
+++ b/Math202a/lectures.tex
@@ -5,4 +5,6 @@
     \include{title.tex}
     \include{Lectures/lecture1.tex}
     \include{Lectures/lecture3.tex}
+    \include{Lectures/lecture4.tex}
+    \include{Lectures/lecture5.tex}
 \end{document}
