--- a/Math250a/lectures.tex
+++ b/Math250a/lectures.tex
@@ -6,4 +6,5 @@
     \include{Lectures/lecture1.tex}
     \include{Lectures/lecture2.tex}
     \include{Lectures/lecture3.tex}
+    \include{Lectures/lecture4.tex}
 \end{document}
