--- a/Math250a/Lectures/lecture5.tex
+++ b/Math250a/Lectures/lecture5.tex
@@ -124,7 +124,7 @@ the action of $G$.
     $(g, s) \to gH$ is clearly a surjection, because the action is transitive.
     Furthermore, $gs = g's$, then $g'^{-1}g s = s$, so $g'^{-1} g H = H$,
     meaning that $gH = g' H$, so we get the same coset. So the map is an injection too.
-    We can also multiply by arbitrary group elements and get the exact same structure, proving the theorem.
+    We can also multiply elements of $S$ by arbitrary group elements and get the exact same structure, proving the theorem.
 \end{proof}
 \end{theorem}
 
