--- a/Math250a/lectures.tex
+++ b/Math250a/lectures.tex
@@ -8,4 +8,6 @@
     \include{Lectures/lecture3.tex}
     \include{Lectures/lecture4.tex}
     \include{Lectures/lecture5.tex}
+    \include{Lectures/lecture6.tex}
+    \include{Lectures/lecture7.tex}
 \end{document}
