--- a/Math250a/lectures.tex
+++ b/Math250a/lectures.tex
@@ -10,4 +10,9 @@
     \include{Lectures/lecture5.tex}
     \include{Lectures/lecture6.tex}
     \include{Lectures/lecture7.tex}
+    \include{Lectures/lecture8.tex}
+    \include{Lectures/lecture9.tex}
+    \include{Lectures/lecture10.tex}
+    \include{Lectures/lecture11.tex}
+    \include{Lectures/lecture12.tex}
 \end{document}
