--- a/Math202a/lectures.tex
+++ b/Math202a/lectures.tex
@@ -8,4 +8,5 @@
     \include{Lectures/lecture4.tex}
     \include{Lectures/lecture5.tex}
     \include{Lectures/lecture6.tex}
+    \include{Lectures/lecturen.tex}
 \end{document}
