--- a/Math250a/preamble.tex
+++ b/Math250a/preamble.tex
@@ -327,3 +327,9 @@
 \newcommand{\xra}{\xrightarrow}
 \newcommand{\mono}{\twoheadrightarrow}
 \newcommand{\vp}{\varphi}
+\DeclareMathOperator{\Hom}{Hom}
+\DeclareMathOperator{\id}{id}
+\DeclareMathOperator{\Set}{Set}
+\DeclareMathOperator{\Ring}{Ring}
+\DeclareMathOperator{\Group}{Group}
+\DeclareMathOperator{\colim}{colim}
