--- a/Math250a/preamble.tex
+++ b/Math250a/preamble.tex
@@ -333,3 +333,6 @@
 \DeclareMathOperator{\Ring}{Ring}
 \DeclareMathOperator{\Group}{Group}
 \DeclareMathOperator{\colim}{colim}
+\DeclareMathOperator{\polydeg}{deg}
+\DeclareMathOperator{\cont}{cont}
+\DeclareMathOperator{\Frac}{Frac}
