--- a/Math202a/lectures.tex
+++ b/Math202a/lectures.tex
@@ -9,4 +9,5 @@
     \include{Lectures/lecture5.tex}
     \include{Lectures/lecture6.tex}
     \include{Lectures/lecturen.tex}
+    \include{Lectures/lecturen+1.tex}
 \end{document}
