--- a/Math202a/lectures.tex
+++ b/Math202a/lectures.tex
@@ -10,4 +10,5 @@
     \include{Lectures/lecture6.tex}
     \include{Lectures/lecturen.tex}
     \include{Lectures/lecturen+1.tex}
+    \include{Lectures/lecturek.tex}
 \end{document}
