--- a/Math202a/preamble.tex
+++ b/Math202a/preamble.tex
@@ -229,6 +229,7 @@
 \DeclareMathOperator{\Null}{null }  % Null space
 \DeclareMathOperator{\Cols}{C}  % Col space
 \DeclareMathOperator{\corr}{corr}  % correlation
+\DeclareMathOperator{\inte}{int}
 %\DeclareMathOperator{\det}{det}
 % Commands
 \newcommand{\inner}[1]{\left\langle #1 \right\rangle}  % Inner product
