--- a/Math250a/Lectures/lecture13.tex
+++ b/Math250a/Lectures/lecture13.tex
@@ -1,6 +1,6 @@
 % !TEX root = lectures.tex
 \section{Lecture 13}
-\section{Polynomials}
+\subsection{Polynomials}
 \begin{theorem}
 If $k$ is a field, then $k[X]$ is a principal ideal domain (and hence a unique factorization domain).
 \end{theorem}
