--- a/Math250a/lectures.tex
+++ b/Math250a/lectures.tex
@@ -16,4 +16,7 @@
     \include{Lectures/lecture11.tex}
     \include{Lectures/lecture12.tex}
     \include{Lectures/lecture13.tex}
+    \include{Lectures/lecture14.tex}
+    \include{Lectures/lecture15.tex}
+    \include{Lectures/lecture16.tex}
 \end{document}
