--- a/Math202a/Lectures/lecturek.tex
+++ b/Math202a/Lectures/lecturek.tex
@@ -61,7 +61,7 @@ We abstract out our analytic notions by defining things not by their distance, b
     \end{enumerate}
 \end{example}
 \begin{definition}
-    For $A \subseteq X$, the \textbf{interior} of $A$, $\inte(A) = \bigcup_\{O :O \subseteq A, O \in \tau\} O$.
-    The \textbf{closure} of $A$, $\overline{A} = \bigcap_\{C: A \subseteq C, X \setminus C \in \tau\} $.
+    For $A \subseteq X$, the \textbf{interior} of $A$, $\inte(A) = \bigcup_{\{O :O \subseteq A, O \in \tau\}} O$.
+    The \textbf{closure} of $A$, $\overline{A} = \bigcap_{\{C: A \subseteq C, X \setminus C \in \tau\}} C $.
     $\overline{A} \setminus \inte(A) = \pdv{A}$ is called the boundary of $A$.
 \end{definition}
