--- a/Math202a/lectures.tex
+++ b/Math202a/lectures.tex
@@ -11,4 +11,5 @@
     \include{Lectures/lecturen.tex}
     \include{Lectures/lecturen+1.tex}
     \include{Lectures/lecturek.tex}
+    \include{Lectures/lecturej.tex}
 \end{document}
