--- a/Math250a/lectures.tex
+++ b/Math250a/lectures.tex
@@ -19,4 +19,9 @@
     \include{Lectures/lecture14.tex}
     \include{Lectures/lecture15.tex}
     \include{Lectures/lecture16.tex}
+    \include{Lectures/lecture19.tex}
+    \include{Lectures/lecture20.tex}
+    \include{Lectures/lecture21.tex}
+    \include{Lectures/lecture22.tex}
+    \include{Lectures/lecture23.tex}
 \end{document}
