--- a/Math250a/preamble.tex
+++ b/Math250a/preamble.tex
@@ -336,3 +336,5 @@
 \DeclareMathOperator{\polydeg}{deg}
 \DeclareMathOperator{\cont}{cont}
 \DeclareMathOperator{\Frac}{Frac}
+\DeclareMathOperator{\gal}{Gal}
+\DeclareMathOperator{\aut}{aut}
