--- a/Math202a/preamble.tex
+++ b/Math202a/preamble.tex
@@ -268,6 +268,7 @@
 \renewcommand{\L}[1]{\mathbb{L}\left[ #1 \right]}
 \newcommand*{\mca}{\mathcal{A}}
 \newcommand*{\mcc}{\mathcal{C}}
+\newcommand*{\mcf}{\mathcal{F}}
 \newcommand*{\sa}{$\sigma$-algebra}
 
 %%% Miscellaneous
