lecture is done

--- a/Math202a/Lectures/lecturej+1.tex
+++ b/Math202a/Lectures/lecturej+1.tex
@@ -9,6 +9,7 @@ Let $\mca \subseteq \mcc(X, \R)$.
 $\mca$
 \textbf{separates} points if $\forall x, y \in X, x \neq y$ there exists $f \in \mca$
 with $f(x) \neq f(y)$. 
+\end{definition}
 
 \begin{definition}
 $\mca$ is called an \textbf{algebra}
