--- a/Math202a/lectures.tex
+++ b/Math202a/lectures.tex
@@ -12,4 +12,6 @@
     \include{Lectures/lecturen+1.tex}
     \include{Lectures/lecturek.tex}
     \include{Lectures/lecturej.tex}
+    \include{Lectures/lecturej+1.tex}
+    \include{Lectures/lecturej+2.tex}
 \end{document}
